c2m4 Added porta potty by hedges after bumper cars c2m4 Adjusted position of added forklift to be easier to use c2m4 Adjusted position of ammo pile after the bumper cars c2m4 Added an ammo pile on the picnic tables outside the barn c2m4 Block standing on top of the scaffolding at the event c2m4 Infected ladder on back of scaffolding at the event c4m2/3 Improved clipping on fences c5m2 Remove 3 (out of 4) pill spawns at the humvee outside saferoom c5m2 Removed pill spawn behind porta potties outside saferoom c5m3 Removed 2 pill spawns outside the saferoom c5m3 Remove 1 pill spawn from the dark room under the bus drop where 2 sets could spawn together

--- a/cfg/stripper/maps/c2m4_barns.cfg
+++ b/cfg/stripper/maps/c2m4_barns.cfg
@@ -3,6 +3,9 @@
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
 ; ==       Modify director behaviour and events      ==
 ; =====================================================
+modify:
+{
+	
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
@@ -81,12 +84,23 @@ filter:
 ; ==          Add or modify ammo pile spawns         ==
 ; =====================================================
 add:
-; --- Ammo pile on first game hut after bumper cars section
+; --- Ammo pile by first game hut after bumper cars section
 {
 	"classname" "weapon_ammo_spawn"
-	"origin" "239 1242 -150"
+	"origin" "325 1708 -192"
 	"angles" "0 180 0"
-	"model" "models/props_unique/spawn_apartment/coffeeammo.mdl"
+	"model" "models/props/terror/ammo_stack.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
+; --- Ammo pile on the picnic tables outside the barn
+{
+	"classname" "weapon_ammo_spawn"
+	"origin" "-1280 1312 -160"
+	"angles" "0 270 0"
+	"model" "models/props/terror/ammo_stack.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 	"spawnflags" "2"
@@ -161,8 +175,8 @@ filter:
 add:
 {
 	"classname" "prop_physics"
-	"origin" "421 2209 -192"
-	"angles" "0 340"
+	"origin" "385 2170 -192"
+	"angles" "0 54 0"
 	"model" "models/props/cs_assault/forklift.mdl"
 	"solid" "6"
 	"fadescale" "0"
@@ -368,6 +382,15 @@ add:
 	"origin" "-1032 -669 532"
 	"mins" "-1216 -4 -492"
 	"maxs" "1216 4 492"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block standing on top of the scaffolding at the event
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2756 1356 508"
+	"mins" "-56 -98 -516"
+	"maxs" "56 98 516"
 	"initialstate" "1"
 	"BlockType" "1"
 }
@@ -858,6 +881,23 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
+; --- Porta potty by hedges after bumper cars
+{
+	"classname" "prop_dynamic"
+	"origin" "559 2159 -192"
+	"angles" "0 180 0"
+	"model" "models/props_urban/outhouse001.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "559 2159 466"
+	"mins" "-28 -28 -558"
+	"maxs" "28 28 558"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Wooden boards under barn ceiling to cover up props from the roof that clip through
 ; --- Left row
 {
@@ -1206,6 +1246,18 @@ add:
 	"normal.z" "0.00"
 	"team" "2"
 }
+; --- Infected ladder on back of scaffolding at the event
+{
+	"classname" "func_simpleladder"
+	"origin" "-1207 4564 -36"
+	"angles" "0 90 0"
+	"model" "*66"
+	"normal.x" "0.00"
+	"normal.y" "1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+
 
 ; #######  MISCELLANEOUS / MAP SPECIFIC CHANGES  ######
 ; =====================================================
