--- a/cfg/stripper/maps/c5m2_park.cfg
+++ b/cfg/stripper/maps/c5m2_park.cfg
@@ -64,6 +64,21 @@ modify:
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
+filter:
+; --- Remove 3 (out of 4) pill spawns at the humvee outside saferoom
+{
+	"hammerid" "1867354"
+}
+{
+	"hammerid" "1867374"
+}
+{
+	"hammerid" "1867352"
+}
+; --- Removed pill spawn behind porta potties outside saferoom
+{
+	"hammerid" "2304469"
+}
 ; --- Make weapon spawns in the park consistent
 modify:
 ; --- Gazebo: SMG
