--- a/cfg/stripper/maps/c5m3_cemetery.cfg
+++ b/cfg/stripper/maps/c5m3_cemetery.cfg
@@ -15,6 +15,18 @@
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
+filter:
+; --- Removed 2 pill spawns outside the saferoom
+{
+	"hammerid" "2131772"
+}
+{
+	"hammerid" "2131838"
+}
+; --- Remove 1 pill spawn from the dark room under the bus drop where 2 sets could spawn together
+{
+	"hammerid" "2131752"
+}
 modify:
 ; --- Make the guns in the first house always spawn a shotgun and SMG
 {
