Started work on c12m2 Made all forklifts start in their broken state to prevent physics issues on when first hit by tanks

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -30,6 +30,17 @@ modify:
 		"classname" "prop_physics"
 	}
 }
+; --- Replace all forklift models with the broken version to prevent physics issues when first hit
+{
+	match:
+	{
+		"model" "models/props/cs_assault/forklift.mdl"
+	}
+	replace:
+	{
+		"model" "models/props/cs_assault/forklift_brokenlift.mdl"
+	}
+}
 
 ; =====================================================
 ; ==               T2 WEAPON SPAWN FIX               ==
