--- a/cfg/stripper/maps/c12m1_hilltop.cfg
+++ b/cfg/stripper/maps/c12m1_hilltop.cfg
@@ -299,7 +299,7 @@ modify:
 ; ==                   CLIP REMOVAL                  ==
 ; ==      Remove miscellaneous clips and brushes     ==
 ; =====================================================
-; --- Remove TLS infected clips after loading
+; --- Remove TLS clips after loading
 add:
 {
 	"classname" "logic_auto"
