--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -99,6 +99,30 @@ add:
 	"fadescale" "0"
 	"spawnflags" "256"
 }
+; --- Replace model of TLS 2009 forklift
+{
+	"classname" "logic_auto"
+	; --- Remove TLS forklift
+	"OnMapSpawn" "anv_mapfixes_hittable_2009forklift,Kill,,10,-1"
+	; --- Spawn new forklift
+	"OnMapSpawn" "forklift_2009_replacement_template,ForceSpawn,,11,-1"
+}
+{
+	"classname" "prop_physics"
+	"origin" "-3666 -1321 -111"
+	"angles" "0 135 0"
+	"model" "models/props/cs_assault/forklift_brokenlift.mdl"
+	"solid" "6"
+	"targetname" "forklift_2009_replacement"
+	"fadescale" "0"
+}
+; --- Template to spawn the bumper car
+{
+	"classname" "point_template"
+	"targetname" "forklift_2009_replacement_template"
+	"Template01" "forklift_2009_replacement"
+	"spawnflags" "2"
+}
 
 ; #############  MAP CLIPPING AND ISSUES  #############
 ; =====================================================
