Continued work on c12m2 Fixed c7m1 intro spawn locations not being used due to missing add function Fixed c7m1 and c7m2 scavenge spawn positions caused by thesaccing_v2.vpk, due to spawn locations being based on L4D1 survivor names

--- a/cfg/stripper/maps/c12m2_traintunnel.cfg
+++ b/cfg/stripper/maps/c12m2_traintunnel.cfg
@@ -15,6 +15,107 @@
 ; ==           PILL / ITEM / WEAPON SPAWNS           ==
 ; ==   Remove or change pill, item & weapon spawns   ==
 ; =====================================================
+add:
+; --- Fireaxe in stairwell outside the saferoom
+{
+	"classname" "weapon_melee_spawn"
+	"origin" "-6495 -7113 403"
+	"angles" "0 270 0"
+	"melee_weapon" "fireaxe"
+	"spawn_without_director" "1"
+	"solid" "0"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "1"
+}
+; --- Make both T1 guns spawn together in the office
+modify:
+{
+	match:
+	{
+		"hammerid" "1679481"
+	}
+	replace:
+	{
+		"origin" "-6671 -6776 245"
+		"weapon_selection" "any_smg"
+	}
+}
+add:
+{
+	"classname" "weapon_spawn"
+	"origin" "-6675 -6794 245"
+	"angles" "0 330.5 90"
+	"weapon_selection" "tier1_shotgun"
+	"spawn_without_director" "1"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
+; --- Make both T1 guns spawn by the alarmed door
+modify:
+{
+	match:
+	{
+		"hammerid" "1679473"
+	}
+	replace:
+	{
+		"origin" "-8701 -7249 -30"
+		"weapon_selection" "tier1_shotgun"
+	}
+}
+add:
+{
+	"classname" "weapon_spawn"
+	"origin" "-8726 -7243 -30"
+	"angles" "0 322 90"
+	"weapon_selection" "any_smg"
+	"spawn_without_director" "1"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
+add:
+; --- Potential melee spawn in the storage room with the alarmed door
+{
+	"classname" "weapon_melee_spawn"
+	"origin" "-8699 -7509 -4"
+	"angles" "0 270 90"
+	"melee_weapon" "any"
+	;"spawn_without_director" "1"
+	"solid" "0"
+	"disableshadows" "1"
+	"spawnflags" "0"
+	"count" "1"
+}
+; --- Make both T1 guns spawn by on the table outside
+modify:
+{
+	match:
+	{
+		"hammerid" "1679491"
+	}
+	replace:
+	{
+		"origin" "-6597 -8596 -28**"
+		"weapon_selection" "tier1_shotgun"
+	}
+}
+add:
+{
+	"classname" "weapon_spawn"
+	"origin" "-6595 -8567 -28"
+	"angles" "0 240 -90"
+	"weapon_selection" "any_smg"
+	"spawn_without_director" "1"
+	"solid" "6"
+	"disableshadows" "1"
+	"spawnflags" "2"
+	"count" "5"
+}
 filter:
 ; --- Remove a set of pills by the end saferoom
 {
@@ -37,11 +138,11 @@ modify:
 		"spawnflags" "2"
 	}
 }
-; --- Add an ammo pile by the gun table after the event
 add:
+; --- Ammo pile by the gun table after the event
 {
 	"classname" "weapon_ammo_spawn"
-	"origin" "-6596 -8630 -61"
+	"origin" "-6631 -8573 -59"
 	"angles" "0 180 0"
 	"model" "models/props/terror/ammo_stack.mdl"
 	"solid" "6"
@@ -213,6 +314,8 @@ modify:
 add:
 {
 	"classname" "logic_auto"
+	; --- Clip above roof in outside section
+	"OnMapSpawn" "anv_mapfixes_meticulous_funcinfclip01,Kill,,10,-1"
 	; --- Clip on crashed train in tunnel, replace with our own fix
 	"OnMapSpawn" "anv_mapfixes_stuckwarp_rocketdude,Kill,,10,-1"
 }
@@ -265,6 +368,29 @@ add:
 	"disableshadows" "1"
 }
 
+
+
+; --- Infected ladders to get onto the large pipe running along the tunnel
+{
+	"classname" "func_simpleladder"
+	"origin" "879 -15221.5 -28"
+	"angles" "0 270 0"
+	"model" "*38"
+	"normal.x" "0.00"
+	"normal.y" "1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "1797 -15224.5 -28"
+	"angles" "0 270 0"
+	"model" "*38"
+	"normal.x" "0.00"
+	"normal.y" "1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
 
 
 ; #######  MISCELLANEOUS / MAP SPECIFIC CHANGES  ######
