--- a/cfg/stripper/maps/c7m1_docks.cfg
+++ b/cfg/stripper/maps/c7m1_docks.cfg
@@ -3,6 +3,44 @@
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
 ; ==       Modify director behaviour and events      ==
 ; =====================================================
+add:
+; --- Fix scavenge spawn positions when using thesaccing addon, as the spawn points use the L4D1 survivor names but the addon spawns L4D2 survivors
+{
+	"classname" "info_survivor_position"
+	"origin" "6089.54 342.04 146.017"
+	"angles" "0 195 0"
+	"targetname" "scavenge_position3"
+	"SurvivorName" "Rochelle"
+	"Order" "1"
+	"GameMode" "scavenge"
+}
+{
+	"classname" "info_survivor_position"
+	"origin" "6077.26 256.76 149.017"
+	"angles" "0 195 0"
+	"targetname" "scavenge_position4"
+	"SurvivorName" "Ellis"
+	"Order" "1"
+	"GameMode" "scavenge"
+}
+{
+	"classname" "info_survivor_position"
+	"origin" "6147.4 267.4 150.017"
+	"angles" "0 180 0"
+	"targetname" "scavenge_position2"
+	"SurvivorName" "Nick"
+	"Order" "1"
+	"GameMode" "scavenge"
+}
+{
+	"classname" "info_survivor_position"
+	"origin" "6139.4 315.4 149.017"
+	"angles" "0 180 0"
+	"targetname" "scavenge_position1"
+	"SurvivorName" "Coach"
+	"Order" "1"
+	"GameMode" "scavenge"
+}
 ; --- Add L4D2 survivor spawn positions to the saferoom, as thesaccing.vpk causes L4D2 survivors to be used when transitioning to this map
 {
 	"classname" "info_survivor_position"
