--- a/cfg/stripper/maps/c7m2_barge.cfg
+++ b/cfg/stripper/maps/c7m2_barge.cfg
@@ -3,6 +3,44 @@
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
 ; ==       Modify director behaviour and events      ==
 ; =====================================================
+add:
+; --- Fix scavenge spawn positions when using thesaccing addon, as the spawn points use the L4D1 survivor names but the addon spawns L4D2 survivors
+{
+	"classname" "info_survivor_position"
+	"origin" "-3209.14 269.716 2.08984"
+	"angles" "0 195 0"
+	"targetname" "scavenge_position4"
+	"SurvivorName" "Ellis"
+	"Order" "1"
+	"GameMode" "scavenge"
+}
+{
+	"classname" "info_survivor_position"
+	"origin" "-3139 280.356 2.08984"
+	"angles" "0 180 0"
+	"targetname" "scavenge_position2"
+	"SurvivorName" "Nick"
+	"Order" "1"
+	"GameMode" "scavenge"
+}
+{
+	"classname" "info_survivor_position"
+	"origin" "-3147 328.356 2.08984"
+	"angles" "0 180 0"
+	"targetname" "scavenge_position1"
+	"SurvivorName" "Coach"
+	"Order" "1"
+	"GameMode" "scavenge"
+}
+{
+	"classname" "info_survivor_position"
+	"origin" "-3196.86 354.997 4.08984"
+	"angles" "0 195 0"
+	"targetname" "scavenge_position3"
+	"SurvivorName" "Rochelle"
+	"Order" "1"
+	"GameMode" "scavenge"
+}
 
 
 ; ################  ITEM SPAWN CHANGES  ###############
