Continued work on c12m2 Tweaked c6m2 ladders to align on grid

--- a/cfg/stripper/maps/c12m2_traintunnel.cfg
+++ b/cfg/stripper/maps/c12m2_traintunnel.cfg
@@ -264,7 +264,7 @@ add:
 ; ==       New props for balance and SI spawns       ==
 ; =====================================================
 add:
-; --- Awning outside 2 office windows at the warehouse entrance
+; --- Awning outside the office windows at the warehouse entrance
 {
 	"classname" "prop_dynamic"
 	"origin" "-6720 -6637 227"
@@ -272,6 +272,85 @@ add:
 	"model" "models/props_street/awning_long_limitedcollision.mdl"
 	"solid" "6"
 	"disableshadows" "1"
+}
+; --- Water tank by the exit door into the train yard
+{
+	"classname" "prop_dynamic"
+	"origin" "-6916 -7953 -64"
+	"angles" "0 90 0"
+	"model" "models/props_unique/processor_tank.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Concrete bags by the exit door into the train yard
+{
+	"classname" "prop_dynamic"
+	"origin" "-6812 -7742 -64"
+	"angles" "0 180 0"
+	"model" "models/props/de_prodigy/concretebags2.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Crashed train car by the end saferoom
+{
+	"classname" "prop_dynamic"
+	"origin" "-1822 -9658 -47"
+	"angles" "-10 112.5 0"
+	"model" "models/props_vehicles/train_box_small.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+	"rendercolor" "117 126 99"
+}
+; --- Block survivors from jumping on the train
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1853.5 -9584.3 219"
+	"angles" "0 112.5 0"
+	"mins" "-80 -49.5 -69"
+	"maxs" "80 49.5 69"
+	"boxmins" "-80 -49.5 -69"
+	"boxmaxs" "80 49.5 69"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1782.1 -9754.4 200"
+	"angles" "0 112.5 0"
+	"mins" "-104 -49.5 -88"
+	"maxs" "104 49.5 88"
+	"boxmins" "-104 -49.5 -88"
+	"boxmaxs" "104 49.5 88"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block LOS under train
+{
+	"classname" "logic_auto"
+	"OnMapSpawn" "anv_mapfixes_losfix_endsaferoom_train_a,AddOutput,mins -2 -68 -35,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_endsaferoom_train_a,AddOutput,maxs 2 68 35,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_endsaferoom_train_a,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_endsaferoom_train_b,AddOutput,mins -30 -2 -35,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_endsaferoom_train_b,AddOutput,maxs 30 2 35,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_endsaferoom_train_b,AddOutput,solid 2,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_endsaferoom_train_c,AddOutput,mins -2 -88 -35,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_endsaferoom_train_c,AddOutput,maxs 2 88 35,0,-1"
+	"OnMapSpawn" "anv_mapfixes_losfix_endsaferoom_train_c,AddOutput,solid 2,0,-1"
+}
+{
+	"classname" "func_brush"
+	"origin" "-1850 -9572 -32"
+	"targetname" "anv_mapfixes_losfix_endsaferoom_train_a"
+}
+{
+	"classname" "func_brush"
+	"origin" "-1822 -9642 -32"
+	"targetname" "anv_mapfixes_losfix_endsaferoom_train_b"
+}
+{
+	"classname" "func_brush"
+	"origin" "-1790 -9728 -32"
+	"targetname" "anv_mapfixes_losfix_endsaferoom_train_c"
 }
 
 ; =====================================================
@@ -332,7 +411,7 @@ add:
 ; ==              Add or change ladders              ==
 ; =====================================================
 add:
-; --- Infected ladder at warehouse entrance to mirror ladder on parallel walkway
+; --- Infected ladder at office exit to mirror ladder on the other walkway
 {
 	"classname" "func_simpleladder"
 	"origin" "0 -353 0"
@@ -364,6 +443,27 @@ add:
 	"origin" "-6720 -6811 100"
 	"angles" "0 270 0"
 	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+
+
+; --- Infected ladder to climb on other side of train car in the tunnel entrance
+{
+	"classname" "func_simpleladder"
+	"origin" "-12450 -1547.5 -120.5"
+	"angles" "0 90 0"
+	"model" "*38"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-5992 -8268 87"
+	"angles" "0 0 0"
+	"model" "models/props_rooftop/gutter_pipe_128.mdl"
 	"solid" "0"
 	"disableshadows" "1"
 }
