--- a/cfg/stripper/maps/c6m2_bedlam.cfg
+++ b/cfg/stripper/maps/c6m2_bedlam.cfg
@@ -3,7 +3,7 @@
 ; ==          DIRECTOR & EVENT MODIFICATION          ==
 ; ==       Modify director behaviour and events      ==
 ; =====================================================
-; --- Add obscure (blue) nav area around the edge of the room where survivors drop into the sewer, so SI and horde can spawn
+; --- Add obscured (blue) nav area around the edge of the room where survivors drop into the sewer, so SI and horde can spawn
 add:
 {
 	"classname" "point_nav_attribute_region"
@@ -1034,7 +1034,7 @@ add:
 ; --- Infected ladders on the walkways where survivors drop into the sewer
 {
 	"classname" "func_simpleladder"
-	"origin" "586.00 4562.00 -1128.47"
+	"origin" "586.00 4562.00 -1128.5"
 	"angles" "0 0 0"
 	"model" "*76"
 	"normal.x" "0.00"
@@ -1052,7 +1052,7 @@ add:
 }
 {
 	"classname" "func_simpleladder"
-	"origin" "1959 5598 -1128.47"
+	"origin" "1959 5598 -1128.5"
 	"angles" "0 180 0"
 	"model" "*76"
 	"normal.x" "0.00"
@@ -1071,7 +1071,7 @@ add:
 ; --- Infected ladders on the walkways after the first gate in the sewer
 {
 	"classname" "func_simpleladder"
-	"origin" "3687 6222 -1128.47"
+	"origin" "3687 6222 -1128.5"
 	"angles" "0 180 0"
 	"model" "*76"
 	"normal.x" "0.00"
@@ -1089,7 +1089,7 @@ add:
 }
 {
 	"classname" "func_simpleladder"
-	"origin" "2621 5189 -1173.97"
+	"origin" "2621 5189 -1174"
 	"angles" "0 0 0"
 	"model" "*76"
 	"normal.x" "0.00"
@@ -1107,7 +1107,7 @@ add:
 }
 {
 	"classname" "func_simpleladder"
-	"origin" "3133 5189 -1173.97"
+	"origin" "3133 5189 -1174"
 	"angles" "0 0 0"
 	"model" "*76"
 	"normal.x" "0.00"
@@ -1125,7 +1125,7 @@ add:
 }
 {
 	"classname" "func_simpleladder"
-	"origin" "4583 6218 -1173.97"
+	"origin" "4583 6218 -1174"
 	"angles" "0 180 0"
 	"model" "*76"
 	"normal.x" "0.00"
@@ -1143,7 +1143,7 @@ add:
 }
 {
 	"classname" "func_simpleladder"
-	"origin" "4029 5189 -1173.97"
+	"origin" "4029 5189 -1174"
 	"angles" "0 0 0"
 	"model" "*76"
 	"normal.x" "0.00"
@@ -1161,7 +1161,7 @@ add:
 }
 {
 	"classname" "func_simpleladder"
-	"origin" "5124 5706 -1173.97"
+	"origin" "5124 5706 -1174"
 	"angles" "0 180 0"
 	"model" "*76"
 	"normal.x" "0.00"
@@ -1179,7 +1179,7 @@ add:
 }
 {
 	"classname" "func_simpleladder"
-	"origin" "4629 6144 -1173.97"
+	"origin" "4629 6144 -1174"
 	"angles" "0 270 0"
 	"model" "*76"
 	"normal.x" "-1.00"
@@ -1198,7 +1198,7 @@ add:
 ; --- Infected ladders on the walkways after the second gate in the sewer
 {
 	"classname" "func_simpleladder"
-	"origin" "5106 4930 -1128.47"
+	"origin" "5106 4930 -1128.5"
 	"angles" "0 0 0"
 	"model" "*76"
 	"normal.x" "0.00"
@@ -1216,7 +1216,7 @@ add:
 }
 {
 	"classname" "func_simpleladder"
-	"origin" "6172 5966 -1128.47"
+	"origin" "6172 5966 -1128.5"
 	"angles" "0 180 0"
 	"model" "*76"
 	"normal.x" "0.00"
@@ -1234,7 +1234,7 @@ add:
 }
 {
 	"classname" "func_simpleladder"
-	"origin" "5810 4930 -1128.47"
+	"origin" "5810 4930 -1128.5"
 	"angles" "0 0 0"
 	"model" "*76"
 	"normal.x" "0.00"
@@ -1252,7 +1252,7 @@ add:
 }
 {
 	"classname" "func_simpleladder"
-	"origin" "6876 5966 -1128.47"
+	"origin" "6876 5966 -1128.5"
 	"angles" "0 180 0"
 	"model" "*76"
 	"normal.x" "0.00"
