c1m4 Blocked gas cans from being launched into all remaining unreachable locations, improved method used to block cans Added template for script_clip_vphysics

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -215,6 +215,17 @@ add:
 	"spawnflags" "1"
 	; --- Trigger event output here
 }
+; --- VPhysics Clips
+; --- NOTE: Extent defines the mins AND maxs of the brush
+; --- NOTE: Brush will not function unless StartDisabled is set to 0, the the brush is enabled by firing an Enable output
+{
+	"classname" "script_clip_vphysics"
+	"origin" "[x y z]"
+	"angles" "[p y r]"
+	"extent" "[x y z]"
+	"filtername" "filter_gascan"
+	"StartDisabled" "0"
+}
 
 ; ####################  I/O LOGIC  ####################
 ; --- Template for modifying entity input/output logic
