--- a/cfg/stripper/maps/c12m2_traintunnel.cfg
+++ b/cfg/stripper/maps/c12m2_traintunnel.cfg
@@ -163,6 +163,48 @@ add:
 ; ==      Block intentionally performed exploits     ==
 ; =====================================================
 add:
+; --- Block survivors from standing on some pipes in the warehouse
+{
+	"classname" "env_physics_blocker"
+	"origin" "-7880 -6369 164"
+	"mins" "-120 -7 -28"
+	"maxs" "120 7 28"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-8394 -6890 144"
+	"mins" "-389 -7 -48"
+	"maxs" "389 7 48"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-8394 -7227 144"
+	"mins" "-389 -7 -48"
+	"maxs" "389 7 48"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block survivors from standing on the metal support beams by the silos after the warehouse
+{
+	"classname" "env_physics_blocker"
+	"origin" "-8264 -7302 252"
+	"mins" "-248 -6 -68"
+	"maxs" "248 6 68"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-7208 -7302 252"
+	"mins" "-424 -6 -68"
+	"maxs" "424 6 68"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 ; --- Block survivors from walking along the pipe to skip the ladder in the tunnel
 {
 	"classname" "env_physics_blocker"
@@ -288,6 +330,15 @@ add:
 	"origin" "-6812 -7742 -64"
 	"angles" "0 180 0"
 	"model" "models/props/de_prodigy/concretebags2.mdl"
+	"solid" "6"
+	"disableshadows" "1"
+}
+; --- Train car behind the fence at the back of the train yard
+{
+	"classname" "prop_dynamic"
+	"origin" "-9412 -8735 -64"
+	"angles" "0 0 0"
+	"model" "models/props_vehicles/train_orecar.mdl"
 	"solid" "6"
 	"disableshadows" "1"
 }
@@ -448,6 +499,66 @@ add:
 }
 
 
+
+; --- Infected ladders to climb up to the first set of windows at the train yard
+{
+	"classname" "func_simpleladder"
+	"origin" "-15208 -1373.5 -34"
+	"angles" "0 90 0"
+	"model" "*38"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "-14696 -1373.5 -34"
+	"angles" "0 90 0"
+	"model" "*38"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Clipping on ladders
+{
+	"classname" "env_physics_blocker"
+	"origin" "-8750 -8076 39"
+	"mins" "-16 -12 -134"
+	"maxs" "16 12 134"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-8238 -8076 39"
+	"mins" "-16 -12 -134"
+	"maxs" "16 12 134"
+	"initialstate" "1"
+	"BlockType" "0"
+}
+; --- Infected ladders to get over the fence at the back of the train yard
+{
+	"classname" "func_simpleladder"
+	"origin" "-15611.5 -15139 -121"
+	"angles" "0 180 0"
+	"model" "*38"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "-15611.5 -14743 -121"
+	"angles" "0 180 0"
+	"model" "*38"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
 ; --- Infected ladder to climb on other side of train car in the tunnel entrance
 {
 	"classname" "func_simpleladder"
