--- a/cfg/stripper/maps/c1m4_atrium.cfg
+++ b/cfg/stripper/maps/c1m4_atrium.cfg
@@ -109,7 +109,7 @@ add:
 ; =====================================================
 add:
 ; --- Block gas cans (and players) from ending up in unreachable locations
-; --- Lower Floor
+; --- Lower Floor (1st)
 ; --- Re-opening Construction
 {
 	"classname" "env_physics_blocker"
@@ -187,7 +187,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "4"
 }
-; --- Middle Floor - Scaffolding can be used to reach some of them, so they aren't blocked
+; --- Middle Floor (2nd)
 ; --- Re-opening Construction
 {
 	"classname" "env_physics_blocker"
@@ -263,7 +263,7 @@ add:
 	"initialstate" "1"
 	"BlockType" "4"
 }
-; --- Upper Floor
+; --- Upper Floor (3rd)
 ; --- Guardian Sports Source
 {
 	"classname" "env_physics_blocker"
@@ -318,38 +318,141 @@ add:
 	"initialstate" "1"
 	"BlockType" "4"
 }
-; --- Additional blocking on areas that infected can reach, so we have to use func_clip_vphysics which has more limitations
-; --- Block gas cans from reaching the entire 4th floor
+; --- Additional gas can blockers to prevent cans from being launched to locations that are unreachable for survivors, but still reachable for infected
+; --- Elevator Shaft
 {
-	"classname" "func_clip_vphysics"
-	"origin" "1088 -1248 832"
-	"model" "*157"
+	"classname" "script_clip_vphysics"
+	"origin" "-4076 -3404 784"
+	"angles" "0 0 0"
+	"extent" "92 124 624"
 	"filtername" "filter_gascan"
+	"StartDisabled" "0"
+}
+; --- Roof Top
+{
+	"classname" "script_clip_vphysics"
+	"origin" "-5770 -3926 1216"
+	"angles" "0 45 0"
+	"extent" "278 400 192"
+	"filtername" "filter_gascan"
+	"StartDisabled" "0"
 }
 {
-	"classname" "func_clip_vphysics"
-	"origin" "-1024 -1248 832"
-	"model" "*157"
+	"classname" "script_clip_vphysics"
+	"origin" "-4640 -4212 1244"
+	"angles" "0 0 0"
+	"extent" "2272 36 164"
 	"filtername" "filter_gascan"
+	"StartDisabled" "0"
 }
-; --- Additional blocking behind the existing clips on the 3rd floor as gascans with enough speed can clip through them
+; --- Top Floor (4th)
 {
-	"classname" "func_clip_vphysics"
-	"origin" "2192 -3168 600"
-	"model" "*157"
+	"classname" "script_clip_vphysics"
+	"origin" "-5576 -3228 1104"
+	"angles" "0 0 0"
+	"extent" "848 340 304"
 	"filtername" "filter_gascan"
-}
-{
-	"classname" "func_clip_vphysics"
-	"origin" "-3864.5 -3284.55 104.87"
-	"model" "*121"
-	"filtername" "filter_gascan"
+	"StartDisabled" "0"
 }
 {
-	"classname" "func_clip_vphysics"
-	"origin" "-3752.5 -3284.55 104.87"
-	"model" "*121"
+	"classname" "script_clip_vphysics"
+	"origin" "-4444 -3024 1104"
+	"angles" "0 0 0"
+	"extent" "284 136 304"
 	"filtername" "filter_gascan"
+	"StartDisabled" "0"
+}
+{
+	"classname" "script_clip_vphysics"
+	"origin" "-3936 -3072 1104"
+	"angles" "0 0 0"
+	"extent" "224 184 304"
+	"filtername" "filter_gascan"
+	"StartDisabled" "0"
+}
+{
+	"classname" "script_clip_vphysics"
+	"origin" "-3688 -4332 1104"
+	"angles" "0 0 0"
+	"extent" "232 156 304"
+	"filtername" "filter_gascan"
+	"StartDisabled" "0"
+}
+{
+	"classname" "script_clip_vphysics"
+	"origin" "-4696 -4332 1100"
+	"angles" "0 0 0"
+	"extent" "232 156 308"
+	"filtername" "filter_gascan"
+	"StartDisabled" "0"
+}
+; --- Top and Upper Floors (4th and 3rd)
+{
+	"classname" "script_clip_vphysics"
+	"origin" "-3144 -3404 972"
+	"angles" "0 0 0"
+	"extent" "776 164 436"
+	"filtername" "filter_gascan"
+	"StartDisabled" "0"
+}
+; --- Upper Floor (3rd)
+{
+	"classname" "script_clip_vphysics"
+	"origin" "-6156 -3504 640"
+	"angles" "0 0 0"
+	"extent" "84 16 104"
+	"filtername" "filter_gascan"
+	"StartDisabled" "0"
+}
+{
+	"classname" "script_clip_vphysics"
+	"origin" "-3372 -4208 772"
+	"angles" "0 0 0"
+	"extent" "52 16 236"
+	"filtername" "filter_gascan"
+	"StartDisabled" "0"
+}
+{
+	"classname" "script_clip_vphysics"
+	"origin" "-2844 -4332 772"
+	"angles" "0 0 0"
+	"extent" "476 156 236"
+	"filtername" "filter_gascan"
+	"StartDisabled" "0"
+}
+{
+	"classname" "script_clip_vphysics"
+	"origin" "-2468 -3872 972"
+	"angles" "0 0 0"
+	"extent" "100 304 436"
+	"filtername" "filter_gascan"
+	"StartDisabled" "0"
+}
+{
+	"classname" "script_clip_vphysics"
+	"origin" "-3688 -4168 972"
+	"angles" "0 0 0"
+	"extent" "240 12 436"
+	"filtername" "filter_gascan"
+	"StartDisabled" "0"
+}
+; --- Under Construction Bridge
+{
+	"classname" "script_clip_vphysics"
+	"origin" "-3380 -3881 972"
+	"angles" "0 200 0"
+	"extent" "64 352 436"
+	"filtername" "filter_gascan"
+	"StartDisabled" "0"
+}
+; --- Mall Exit Doors
+{
+	"classname" "script_clip_vphysics"
+	"origin" "-4448 -2308 704"
+	"angles" "0 0 0"
+	"extent" "416 4 704"
+	"filtername" "filter_gascan"
+	"StartDisabled" "0"
 }
 
 
