--- a/cfg/stripper/maps/c2m2_fairgrounds.cfg
+++ b/cfg/stripper/maps/c2m2_fairgrounds.cfg
@@ -116,7 +116,7 @@ add:
 	"targetname" "forklift_2009_replacement"
 	"fadescale" "0"
 }
-; --- Template to spawn the bumper car
+; --- Template to spawn the forklift
 {
 	"classname" "point_template"
 	"targetname" "forklift_2009_replacement_template"
