Completed work on c12m2 c6m2 Remove a set elevator doors after the jazz club to open up a room for spawns

--- a/_Templates/entity_template.cfg
+++ b/_Templates/entity_template.cfg
@@ -217,7 +217,7 @@ add:
 }
 ; --- VPhysics Clips
 ; --- NOTE: Extent defines the mins AND maxs of the brush
-; --- NOTE: Brush will not function unless StartDisabled is set to 0, the the brush is enabled by firing an Enable output
+; --- NOTE: Brush will not function unless StartDisabled is set to 0, or the brush is enabled by firing an Enable output
 {
 	"classname" "script_clip_vphysics"
 	"origin" "[x y z]"
