--- a/cfg/stripper/maps/c12m2_traintunnel.cfg
+++ b/cfg/stripper/maps/c12m2_traintunnel.cfg
@@ -205,7 +205,33 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
-; --- Block survivors from walking along the pipe to skip the ladder in the tunnel
+; --- Block survivors from standing on the fence at the back of the train yard
+{
+	"classname" "env_physics_blocker"
+	"origin" "-8870 -8529 1156"
+	"mins" "-10 -128 -1036"
+	"maxs" "10 128 1036"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block survivors from jumping on debris to get back up the first one way drop train in the tunnel
+{
+	"classname" "env_physics_blocker"
+	"origin" "-5785 -8604 26"
+	"mins" "-7 -44 -14"
+	"maxs" "7 44 14"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+{
+	"classname" "env_physics_blocker"
+	"origin" "-5774.5 -8552 16"
+	"mins" "-7 -8 -24"
+	"maxs" "7 8 24"
+	"initialstate" "1"
+	"BlockType" "1"
+}
+; --- Block survivors from walking along the pipe to skip the ladder by the end saferoom
 {
 	"classname" "env_physics_blocker"
 	"origin" "-2093 -8921 163"
@@ -217,11 +243,30 @@ add:
 	"initialstate" "1"
 	"BlockType" "1"
 }
+; --- Block survivors from skipping the ladder by the end saferoom by jumping on the debris pile
+{
+	"classname" "env_physics_blocker"
+	"origin" "-2319 -9280 -7"
+	"mins" "-44 -27 -57"
+	"maxs" "44 27 57"
+	"initialstate" "1"
+	"BlockType" "1"
+}
 
 ; =====================================================
 ; ==                  OUT OF BOUNDS                  ==
 ; ==  Block players getting outside / under the map  ==
 ; =====================================================
+add:
+; --- Block players from going out of bounds in the far corner of the map by the gravel pile
+{
+	"classname" "env_physics_blocker"
+	"origin" "-10412 -4479 96"
+	"mins" "-596 -95 -176"
+	"maxs" "596 95 176"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 
 ; =====================================================
 ; ==                   STUCK SPOTS                   ==
@@ -241,11 +286,28 @@ add:
 	"targetname" "anv_mapfixes_duckqol_train_crash_stuck"
 	"spawnflags" "2049"
 }
+; --- Block a stuck spot behind the train before the end saferoom
+{
+	"classname" "env_physics_blocker"
+	"origin" "-1450 -10297 -12"
+	"mins" "-40 -47 -52"
+	"maxs" "40 47 52"
+	"initialstate" "1"
+	"BlockType" "0"
+}
 
 ; =====================================================
 ; ==                 NUISANCE CHANGES                ==
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
+filter:
+; --- Remove 2 pallets from pile in the train yard
+{
+	"hammerid" "1283793"
+}
+{
+	"hammerid" "1283789"
+}
 add:
 ; --- Ramps for infected to walk from the awning into the 2 large windows without jumping
 {
@@ -497,9 +559,92 @@ add:
 	"solid" "0"
 	"disableshadows" "1"
 }
-
-
-
+; --- Infected ladder to climb onto the walkway from the train in the warehouse
+{
+	"classname" "func_simpleladder"
+	"origin" "753 -12429 110"
+	"angles" "0 270 0"
+	"model" "*37"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to climb on other side of vent in warehouse
+{
+	"classname" "func_simpleladder"
+	"origin" "-15413.8 -175 -260"
+	"angles" "0 90 0"
+	"model" "*70"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladder to climb on lone warehouse shelf on the left
+{
+	"classname" "func_simpleladder"
+	"origin" "-14119 -303.5 -41"
+	"angles" "0 90 0"
+	"model" "*38"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladders to climb over a warehouse shelf near the forklift
+{
+	"classname" "func_simpleladder"
+	"origin" "-1255.5 -532 -167.5"
+	"angles" "0 0 0"
+	"model" "*38"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "-14648.5 -13448 -167.5"
+	"angles" "0 180 0"
+	"model" "*38"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladders to climb up walkway above forklift in the warehouse
+{
+	"classname" "func_simpleladder"
+	"origin" "-14728.5 -13354 -8"
+	"angles" "0 180 0"
+	"model" "*38"
+	"normal.x" "1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+; --- Infected ladders to climb up girders in boiler room
+{
+	"classname" "func_simpleladder"
+	"origin" "-2037.5 285 -122"
+	"angles" "0 0 0"
+	"model" "*50"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "func_simpleladder"
+	"origin" "-245.5 285 -122"
+	"angles" "0 0 0"
+	"model" "*50"
+	"normal.x" "-1.00"
+	"normal.y" "0.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
 ; --- Infected ladders to climb up to the first set of windows at the train yard
 {
 	"classname" "func_simpleladder"
@@ -559,6 +704,44 @@ add:
 	"normal.z" "0.00"
 	"team" "2"
 }
+; --- Infected ladder to climb onto awning outside train yard
+{
+	"classname" "func_simpleladder"
+	"origin" "-13539 -1845.5 -80"
+	"angles" "0 90 0"
+	"model" "*38"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-7081 -8560 126"
+	"angles" "0 0 0"
+	"model" "models/props_rooftop/gutter_pipe_256.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
+; --- Survivor ladder to climb on train in the right-side tunnel entrance from the front
+{
+	"classname" "func_simpleladder"
+	"origin" "-391 -15390.5 -120"
+	"angles" "0 270 0"
+	"model" "*38"
+	"normal.x" "0.00"
+	"normal.y" "1.00"
+	"normal.z" "0.00"
+	"team" "0"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-6849 -8664 -43"
+	"angles" "0 180 0"
+	"model" "models/props_vehicles/train_ladder.mdl"
+	"solid" "0"
+	"disableshadows" "1"
+}
 ; --- Infected ladder to climb on other side of train car in the tunnel entrance
 {
 	"classname" "func_simpleladder"
@@ -578,9 +761,6 @@ add:
 	"solid" "0"
 	"disableshadows" "1"
 }
-
-
-
 ; --- Infected ladders to get onto the large pipe running along the tunnel
 {
 	"classname" "func_simpleladder"
@@ -601,6 +781,25 @@ add:
 	"normal.y" "1.00"
 	"normal.z" "0.00"
 	"team" "2"
+}
+; --- Infected ladder to climb into the broken roof section in the right-side tunnel
+{
+	"classname" "func_simpleladder"
+	"origin" "-13154.5 212.5 157"
+	"angles" "0 90 0"
+	"model" "*49"
+	"normal.x" "0.00"
+	"normal.y" "-1.00"
+	"normal.z" "0.00"
+	"team" "2"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "-4419 -8669 174"
+	"angles" "90 0 0"
+	"model" "models/props_pipes/pipeset08d_128_001a.mdl"
+	"solid" "6"
+	"disableshadows" "1"
 }
 
 
