--- a/cfg/stripper/maps/c6m2_bedlam.cfg
+++ b/cfg/stripper/maps/c6m2_bedlam.cfg
@@ -484,8 +484,12 @@ add:
 	"disableshadows" "1"
 	"rendermode" "10"
 }
-; --- Remove some of the breakable walls in the room on the left under the jazz club
 filter:
+; --- Remove a set elevator doors after the jazz club to open up a room for spawns
+{
+	"hammerid" "566623"
+}
+; --- Remove some of the breakable walls in the room on the left under the jazz club
 {
 	"hammerid" "565850"
 }
