Completed work on c12m3

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -381,6 +381,20 @@ modify:
 ; ==           INFECTED CLIP / TRIGGER FIX           ==
 ; ==  Remove or fix clips and triggers for infected  ==
 ; =====================================================
+; --- First, prevent a useful (non-restrictive) clip on c12m3 from being removed
+modify:
+{
+	match:
+	{
+		"hammerid" "2495986"
+		"targetname" "bridge_pz_clip"
+	}
+	replace:
+	{
+		; --- Convert the entity type back in c12m3_bridge.cfg
+		"classname" "func_brush"
+	}
+}
 ; --- Remove infected clips
 filter:
 {
