Completed work on c12m4 Made hanging lights found in Blood Harvest non-solid

--- a/cfg/stripper/global_filters.cfg
+++ b/cfg/stripper/global_filters.cfg
@@ -2361,11 +2361,33 @@ modify:
 {
 	match:
 	{
+		"classname" "prop_physics"
+		"model" "models/props_lighting/lighthanging.mdl"
+	}
+	insert:
+	{
+		"spawnflags" "4"
+	}
+}
+{
+	match:
+	{
 		"model" "models/props_lighting/lighthanging_animated.mdl"
 	}
 	insert:
 	{
 		"solid" "0"
+	}
+}
+{
+	match:
+	{
+		"classname" "prop_physics"
+		"model" "models/props_lighting/lighthanging_animated.mdl"
+	}
+	insert:
+	{
+		"spawnflags" "4"
 	}
 }
 {
