Completed work on c12m5 c4m1/4 Adjusted fence by garage sale

--- a/cfg/stripper/maps/c12m2_traintunnel.cfg
+++ b/cfg/stripper/maps/c12m2_traintunnel.cfg
@@ -613,7 +613,7 @@ add:
 	"normal.z" "0.00"
 	"team" "2"
 }
-; --- Infected ladders to climb up walkway above forklift in the warehouse
+; --- Infected ladder to climb up to the walkway above the forklift in the warehouse
 {
 	"classname" "func_simpleladder"
 	"origin" "-14728.5 -13354 -8"
