--- a/cfg/stripper/maps/c12m3_bridge.cfg
+++ b/cfg/stripper/maps/c12m3_bridge.cfg
@@ -851,7 +851,7 @@ add:
 	"normal.z" "0.42"
 	"team" "2"
 }
-; --- Visible ladder in place of invisible ladder left of the ramp
+; --- Visible infected ladder in place of invisible ladder left of the ramp
 {
 	"classname" "func_simpleladder"
 	"origin" "14343 -9686 199"
