--- a/cfg/stripper/maps/c12m4_barn.cfg
+++ b/cfg/stripper/maps/c12m4_barn.cfg
@@ -144,7 +144,7 @@ add:
 ; ==      Block intentionally performed exploits     ==
 ; =====================================================
 add:
-; --- Block survivors from jumping into a window in the final house
+; --- Block survivors from jumping into a window in the final house to skip the first room
 {
 	"classname" "env_physics_blocker"
 	"origin" "11138 -4622 -8"
@@ -204,6 +204,15 @@ add:
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
 add:
+; --- Stairs on warehouse loading bay platform
+{
+	"classname" "func_lod"
+	"origin" "791 0 -2"
+	"model" "*63"
+	"DisappearMinDist" "2000"
+	"DisappearMaxDist" "2200"
+	"Solid" "0"
+}
 ; --- Clipping on crashed train debris after exiting the final house
 {
 	"classname" "env_physics_blocker"
@@ -296,7 +305,6 @@ add:
 	"solid" "6"
 	"disableshadows" "1"
 }
-
 ; --- Rock under fences towards the edge of the cliff
 {
 	"classname" "prop_dynamic"
@@ -861,7 +869,7 @@ modify:
 
 ; #######  MISCELLANEOUS / MAP SPECIFIC CHANGES  ######
 ; =====================================================
-; ==                 WAREHOUSE GATES                 ==
+; ==              WAREHOUSE PATH REWORK              ==
 ; ==   Block warehouse entrances to change pathing   ==
 ; =====================================================
 add:
@@ -1016,15 +1024,6 @@ add:
 	"OnTimer" "warehouse_button_prop_glow_back,StartGlowing,,0,-1"
 	"OnTimer" "warehouse_button_prop_glow,StopGlowing,,0.5,-1"
 	"OnTimer" "warehouse_button_prop_glow_back,StopGlowing,,0.5,-1"
-}
-; --- Stairs on warehouse loading bay platform
-{
-	"classname" "func_lod"
-	"origin" "791 0 -2"
-	"model" "*63"
-	"DisappearMinDist" "2000"
-	"DisappearMaxDist" "2200"
-	"Solid" "0"
 }
 
 ; =====================================================
