c6m1 Removed the opened path in the bar c12m2 Moved filter for fallen filing cabinet out of global filters

--- a/cfg/stripper/maps/c12m2_traintunnel.cfg
+++ b/cfg/stripper/maps/c12m2_traintunnel.cfg
@@ -301,6 +301,10 @@ add:
 ; ==      Clipping improvements, QOL map changes     ==
 ; =====================================================
 filter:
+; --- Remove fallen filing cabinet in office
+{
+	"hammerid" "1095964"
+}
 ; --- Remove 2 pallets from pile in the train yard
 {
 	"hammerid" "1283793"
