c1m1 Blocked additional tank spawns between 0% - 24% (existing range of 38% - 79% remains) c1m1 Adjusted extra guns in hallway to be more visible c7m3 Minor update to finale script for improved gamemode checking c12m3 Map distance to 500 c12m4 Map distance to 500

--- a/cfg/stripper/maps/c1m1_hotel.cfg
+++ b/cfg/stripper/maps/c1m1_hotel.cfg
@@ -151,20 +151,28 @@ add:
 	"angles" "0 150 90"
 	"spawnflags" "1"
 }
-; --- Single pickup T1s on the cleaning cart around the corner in the first hallway
+; --- Single pickup T1s on table by cleaning cart around the corner in the first hallway
 {
 	"classname" "weapon_smg"
-	"origin" "1679 5813 2699"
-	"angles" "0 287.5 84"
+	"origin" "1684 5926 2692"
+	"angles" "0 270 90"
 	"ammo" "650"
 	"spawnflags" "1"
 }
 {
 	"classname" "weapon_pumpshotgun"
-	"origin" "1681 5765 2667"
-	"angles" "-80.826 60.7614 -60.5252"
+	"origin" "1687 5894 2692"
+	"angles" "0 255 90"
 	"ammo" "72"
 	"spawnflags" "1"
+}
+{
+	"classname" "prop_dynamic"
+	"origin" "1684 5901 2656"
+	"angles" "0 0 0"
+	"model" "models/props_interiors/table_kitchen.mdl"
+	"solid" "6"
+	"disableshadows" "1"
 }
 ; --- Make the melee in the map room always spawn
 modify:
