--- a/cfg/stripper/maps/c6m2_bedlam.cfg
+++ b/cfg/stripper/maps/c6m2_bedlam.cfg
@@ -485,7 +485,7 @@ add:
 	"rendermode" "10"
 }
 filter:
-; --- Remove a set elevator doors after the jazz club to open up a room for spawns
+; --- Remove a set of elevator doors after the jazz club to open up a room for spawns
 {
 	"hammerid" "566623"
 }
